# RenderFlow

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  RenderFlow Dashboard - Standalone.html  docker-compose.yml  loom_script.txt  make_video.py  pyproject.toml  scenes-test.json  script.txt
deploy/: Caddyfile  README.md  backup.sh  deploy.sh  env.production.example  renderflow-api.service  renderflow-backup.service  renderflow-backup.timer  renderflow-worker.service  setup_server.sh
music/: README.md
renderflow/: __init__.py  api.py  auth.py  billing.py  config.py  db.py  retry.py  schema.py  storage.py  tasks.py
renderflow/pipeline/: assets.py  branding.py  facecheck.py  parallax.py  render.py  script.py  subtitles.py  text_normalize.py
renderflow/providers/: __init__.py  base.py  pexels_query.py
renderflow/providers/avatar/: __init__.py  ffmpeg_still.py  memo_hf.py  postprocess.py  sadtalker_replicate.py  wav2lip_local.py
renderflow/providers/image/: flux_replicate.py  pexels.py  pollinations.py
renderflow/providers/llm/: claude.py
renderflow/providers/tts/: elevenlabs_tts.py  kokoro_tts.py  piper_tts.py
renderflow/providers/video/: pexels_video.py
scripts/: check_providers.py  setup_kokoro.py  setup_wav2lip.py
tests/: conftest.py  stubs.py  test_api.py  test_auth.py  test_billing.py  test_broll.py  test_jobs.py  test_pexels.py  test_pipeline_stub.py  test_production.py  test_providers.py  test_schema.py  test_thumbnail_regen.py
web/: index.html
