[project]
name = "renderflow"
version = "0.1.0"
description = "AI video production orchestration platform"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.50",
    "replicate>=1.0",
    "gradio_client>=1.4",
    "httpx>=0.27",
    "pydantic>=2.7",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
# For the wav2lip-local avatar provider (see scripts/setup_wav2lip.py)
wav2lip = [
    "torch>=2.2",
    "opencv-python>=4.9",
    "librosa>=0.10",
    "tqdm>=4.66",
    "huggingface_hub>=0.23",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["renderflow*"]
