[project]
name = "renderflow"
version = "0.1.0"
description = "AI video production orchestration platform"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.50",
    "replicate>=1.0",
    "gradio_client>=1.4",
    "httpx>=0.27",
    "pydantic>=2.7",
    "python-dotenv>=1.0",
    # Captions (pipeline/subtitles.py) and thumbnail host badge render every
    # video by default — Pillow is core, not an optional extra.
    "pillow",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
# For the multi-user dashboard: API server, auth, Postgres models, and the
# Celery worker (renderflow/{api,auth,db,tasks}.py + web/). Datastores come
# from docker-compose.yml.
web = [
    "fastapi>=0.111",
    "uvicorn>=0.30",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.1",
    "celery[redis]>=5.4",
    "bcrypt>=4.0",
    "itsdangerous>=2.0",
]
# For the kokoro local TTS provider (see scripts/setup_kokoro.py)
kokoro = ["kokoro-onnx>=0.4", "soundfile>=0.12"]
# For depth-parallax scene motion (renderflow/pipeline/parallax.py)
parallax = [
    "transformers>=4.45",
    "torch>=2.2",
    "opencv-python>=4.9",
    "numpy",
]
# For the wav2lip-local avatar provider (see scripts/setup_wav2lip.py)
wav2lip = [
    "torch>=2.2",
    "opencv-python>=4.9",
    "librosa>=0.10",
    "tqdm>=4.66",
    "huggingface_hub>=0.23",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["renderflow*"]
